unpackaged/main/default/objects/litify_docs__Bulk_Merge_Job__c/litify_docs__Bulk_Merge_Job__c.object-meta.xml
<CustomObject>
    <description>Object that tracks information about bulk merge jobs.</description>
    <label>Bulk Merge Job</label>
    <nameField>
        <label>Bulk Merge Job Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Bulk Merge Jobs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>