unpackaged/main/default/objects/litify_docs__Bulk_Merge_Job__c/fields/litify_docs__Error_Details__c.field-meta.xml
<CustomField>
    <fullName>litify_docs__Error_Details__c</fullName>
    <label>Error Details</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>