unpackaged/main/default/objects/litify_docs__Bulk_Merge_Job__c/fields/litify_docs__Job_Id__c.field-meta.xml
<CustomField>
    <fullName>litify_docs__Job_Id__c</fullName>
    <description>Id of the bulk merge job</description>
    <label>Bulk Merge Job Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>