unpackaged/main/default/objects/litify_docs__Bulk_Merge_Job__c/fields/litify_docs__Starting_Object__c.field-meta.xml
<CustomField>
    <fullName>litify_docs__Starting_Object__c</fullName>
    <description>The starting object of the bulk merge job.</description>
    <label>Starting Object</label>
    <length>255</length>
    <type>Text</type>
</CustomField>