unpackaged/main/default/objects/litify_docs__Bulk_Merge_Job__c/fields/litify_docs__Status__c.field-meta.xml
<CustomField>
    <fullName>litify_docs__Status__c</fullName>
    <description>Tracks the status of a bulk merge job</description>
    <label>Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>