unpackaged/main/default/objects/litify_docs__Bulk_Merge_Job__c/fields/litify_docs__Successful_Files__c.field-meta.xml
<CustomField>
    <fullName>litify_docs__Successful_Files__c</fullName>
    <label>Successful_Files</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>